--- a/estilo.css
+++ b/estilo.css
@@ -22,7 +22,55 @@ body {
 .logo {
     width: 152px;
     height: 66px;
-    background: url(./imagens/logo.png)
-no-repeat center;
-text-indent: -3000px; /* ?Usado para esconder o H1 de Logo "Noticias Cidade", este texto aparecerá se o CSS não for carregado. */
+    background: url(./imagens/logo.png) no-repeat center;
+    text-indent: -3000px;
+    /* ?Usado para esconder o H1 de Logo "Noticias Cidade", este texto aparecerá se o CSS não for carregado. */
+}
+
+/* FORMATAÇÃO DA BARRA DE NAVEGAÇÃO DO CABEÇALHO*/
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+#cabecalho ul {
+    margin-top: 30px;
+    background: #b10333;
+    float: left;
+}
+
+#cabecalho ul li {
+    float: left;
+}
+
+#cabecalho ul a {
+    font-size: 0.9em;
+    display: block;
+    padding: 0.5em 1.5em;
+    line-height: 2.1em;
+    text-decoration: none;
+    color: #fff;
+    background: url(./imagens/divisor.png) no-repeat left center;
+}
+
+#cabecalho ul .primeiro a {
+    background: none;
+}
+
+#cabecalho ul a:hover {
+    color: #69001d;
+}
+
+body.home #navegacao a#home,
+body.brasil #navegacao a#brasil,
+body.internacional #navegacao a#internacional,
+body.economia #navegacao a#economia,
+body.saude #navegacao a#saude,
+body.ciencia #navegacao a#ciencia,
+body.fotos #navegacao a#fotos {
+    color: #fff;
+    background: #de003e;
+    cursor: text;
 }
