--- a/estilo.css
+++ b/estilo.css
@@ -82,10 +82,31 @@ body.fotos #navegacao a#fotos {
     background: #f5f5f5;
 }
 
-#primario {
+#lateral {
+    width: 180px;
+    float: left;
+    margin: 0 0 20px -750px;
+    background: yellow;
+}
+
+#tres-colunas #primario {
     width: 270px;
     float: left;
     margin: 0 0 20px 195px;
+    background: blue;
+}
+
+#duas-colunas #primario {
+    width: 555px;
+    float: left;
+    margin: 0 0 20px 195px;
+    background: blue;
+}
+
+#uma-coluna #primario {
+    width: 750px;
+    float: left;
+    margin: 0 0 20px 0px;
     background: blue;
 }
 
@@ -96,12 +117,6 @@ body.fotos #navegacao a#fotos {
     background: green;
 }
 
-#lateral {
-    width: 180px;
-    float: left;
-    margin: 0 0 20px -750px;
-    background: yellow;
-}
 
 /* CONFIGURAÇÕES DO RODAPÉ */
 
@@ -115,5 +130,4 @@ body.fotos #navegacao a#fotos {
     margin: 0 auto;
     color: #fff;
     text-align: center;
-    font-size: 0.8em;
 }
