--- a/estilo.css
+++ b/estilo.css
@@ -86,14 +86,12 @@ body.fotos #navegacao a#fotos {
     width: 180px;
     float: left;
     margin: 0 0 20px -750px;
-    background: yellow;
 }
 
 #primario {
     width: 270px;
     float: left;
     margin: 0 0 20px 195px;
-    background: blue;
 }
 
 #uma-coluna #primario {
@@ -109,7 +107,26 @@ body.fotos #navegacao a#fotos {
     width: 270px;
     float: left;
     margin: 0 0 20px 15px;
-    background: green;
+}
+
+/* CONFIGURAÇÕES CAIXA DE ENTREVISTAS */
+.caixa {
+    margin: 10px 0;
+    padding: 5px;
+    background: #f3f3f3 url(./imagens/fundo-caixa.png);
+}
+
+h2 {
+    font-size: 1.1em;
+    background: #294c71;
+    color: #fff;
+    padding: 5px;
+}
+
+.caixa-conteudo {
+    background: #fff;
+    padding: 5px;
+    margin-top: 5px;
 }
 
 /* CONFIGURAÇÕES DO RODAPÉ */
