--- a/estilo.css
+++ b/estilo.css
@@ -129,6 +129,45 @@ h2 {
     margin-top: 5px;
 }
 
+/* FORMATAÇÃO MENUS LATERAIS */
+
+#lateral ul a {
+    font-size: 0.9em;
+    padding: 3px;
+    display: block;
+    line-height: 30px;
+    color: #000;
+    text-decoration: none;
+    border-bottom: 1px solid #f3f3f3;
+}
+
+#lateral ul a:hover {
+    background: #f9f9f9 url(./imagens/marcador.png) no-repeat left center;
+    padding-left: 20px;
+    color: #a1a1a1;
+}
+
+label {
+    display: block;
+    cursor: pointer;
+}
+
+input {
+    padding: 5px;
+    margin: 3px 0;
+    width: 147px;
+    font-size: 0.9em;
+    background-color: #fff;
+    border: 1px solid #a1a1a1;
+}
+
+input.submit {
+    width: 80px;
+    color: #fff;
+    background-color: #b10333;
+    border: 2px solid #870529;
+}
+
 /* CONFIGURAÇÕES DO RODAPÉ */
 
 #container-rodape {
