--- a/estilo.css
+++ b/estilo.css
@@ -168,6 +168,31 @@ input.submit {
     border: 2px solid #870529;
 }
 
+/* FORMAÇÃO DAS MATÉRIAS DE DESTAQUE */
+
+img.imagem-principal {
+    width: 98%;
+    border: 3px solid #dfdfdf;
+}
+
+/* FORMATANDO OS CABEÇALHOS */
+
+h3 {
+    text-transform: uppercase;
+    display: inline;
+    font-size: 0.8em;
+    padding: 3px;
+}
+
+.destaque h3 {
+    background: #b10333;
+    color: #fff;
+}
+
+.entrevista h3 {
+    background: #de003e;
+}
+
 /* CONFIGURAÇÕES DO RODAPÉ */
 
 #container-rodape {
